syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated";
//option java_outer_classname = "TaxiProto";

package ssc;

service  ssc{
  rpc upsert(ride)  returns (response) {}
  rpc getRides(emptyMessage) returns (response) {}
  rpc addRideLeader(ride) returns (response) {}
  rpc addRideFollower(ride) returns (response) {}
  rpc reserveRideLeader(reservation) returns (ride) {}
}

message emptyMessage {}

message response {
  string msg = 1;
}

message ride {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
  string start_position = 4;
  string end_position = 5;
  string departure_time = 6; // (DD/MM/YYYY)
  int32 vacancies = 7;
  double pd = 8;
}

message reservation {
  string first_name = 1;
  string last_name = 2;
  string departure_time = 3;
  string path = 4;
}

